--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/index.html
@@ -46,215 +46,213 @@
                     <ion-icon name="search-circle-outline"></ion-icon>
                 </div>
             </div>
-            <ul>
-                <a href="womenGucci.html" class="container__navBar__catergory" id='women'
-                    onmouseenter="handleShowDropDown(event)"
-                    onmouseleave="handleShowDropDown(event)">
-                    WOMEN
-                </a>
-                <a href="" class="container__navBar__catergory">CHILDREN </a>
-                <a href="" class="container__navBar__catergory">MEN</a>
-                <a href="" class="container__navBar__catergory">WATCHES</a>
-                <a href="" class="container__navBar__catergory">JEWELRY</a>
-                <a href="" class="container__navBar__catergory">HANDBAGS</a>
-            </ul>
         </nav>
+        <div class="container__navBar2">
+            <ul>
+                <li class="active"><a href="womenGucci.html" class="container__navBar2__catergory" id='women'>WOMEN</a>
+                    <div class="container__navBar2__dropdown" id='women-dropdown'>
+                        <ul>
+                            <li><a href="">
+                                    <span>LASTEST ARRIVALS</span>
+                                </a></li>
+                            <li><a href="">
+                                    View all
+                                </a></li>
+                            <li><a href="">
+                                    Shop by Look
+                                </a></li>
+                            <li><a href="">
+                                    Valentine`s Day Gifts
+                                </a></li>
+                            <li><a href="">
+                                    Gucci Bamboo 1947
+                                </a></li>
+                            <li><a href="">
+                                    Gucci Off The Grid
+                                </a></li>
+                            <li><a href="">
+                                    The Year of the Tiger
+                                </a></li>
+                            <li><a href="">
+                                    The North Face X Gucci
+                                </a></li>
+                            <li><a href="">
+                                    <h5>HANDBAGS</h5>
+                                </a></li>
+                            <li><a href="">
+                                    View all
+                                </a></li>
+                            <li><a href="">
+                                    Gucci Beloved
+                                </a></li>
+                            <li><a href="">
+                                    Crossbody Bagss
+                                </a></li>
+                            <li><a href="">
+                                    Mini Bags
+                                </a></li>
+                            <li><a href="">
+                                    Tote Bags
+                                </a></li>
+                            <li><a href="">
+                                    Sholder Bags
+                                </a></li>
+                            <li><a href="">
+                                    Clutches
+                                </a></li>
+                            <li><a href="">READY TO WAER</li></a>
+                            <li><a href="">View all</li></a>
+                            <li><a href="">Shop by Look</li></a>
+                            <li><a href="">Outwaer</li></a>
+                            <li><a href="">Sweaters & Cardigans</li></a>
+                            <li><a href="">Activewaer</li></a>
+                            <li><a href="">Dresses</li></a>
+                            <li><a href="">Blazes</li></a>
+                            <li><a href="">SHOES</li></a>
+                            <li><a href="">View all</li></a>
+                            <li><a href="">Boots</li></a>
+                            <li><a href="">Sneakers</li></a>
+                            <li><a href="">Sandals</li></a>
+                            <li><a href="">Pumps</li></a>
+                            <li><a href="">Ballet Flats</li></a>
+                            <li><a href="">Maccasins & Loafers</li></a>
+                            <li><a href="">ACCESSORIES</li></a>
+                            <li><a href=""> View all</li></a>
+                            <li><a href="">Wallets</li></a>
+                            <li><a href="">Chain Wallets</li></a>
+                            <li><a href="">Tech Accessories</li></a>
+                            <li><a href="">PumBeltsps</li></a>
+                            <li><a href=""> Eyewaer</li></a>
+                            <li><a href="">Hats & Cloves</li></a>
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="" class="container__navBar2__catergory">CHILDREN </a>
+                    <div class="container__navBar2__dropdown" id='children-dropdown' style="margin-left: -200px;">
+                        <ul>
+                            <li><a href="">BABY (0-36 month)</a></li>
+                            <li><a href="">View all</a></li>
+                            <li><a href="">Newborn</a></li>
+                            <li><a href="">Girls ()</a></li>
+                            <li><a href="">Boys</a></li>
+                            <li><a href="">Baby Shoes</a></li>
+                            <li><a href="">Toddler Shoes</a></li>
+                            <li><a href="">Special Occasion</a></li>
+                            <li><a href="">GIRLS (4 - 12 YEARS)</a></li>
+                            <li><a href="">View all</a></li>
+                            <li><a href="">Clothing</a></li>
+                            <li><a href="">Shoes</a></li>
+                            <li><a href="">Bags & Backpacks</a></li>
+                            <li><a href="">Balts</a></li>
+                            <li><a href="">Soft Accessories</a></li>
+                            <li><a href="">Special Occasion</a></li>
+                            <li><a href="">BOYS (4 - 12 YEARS)</a></li>
+                            <li><a href="">View all</a></li>
+                            <li><a href="">Clothing</a></li>
+                            <li><a href="">Bags & Backpacks</a></li>
+                            <li><a href="">Soft Accessories</a></li>
+                            <li><a href="">Special Occasion</a></li>
+                        </ul>
+                    </div>
+                </li>
 
-        <div class="container__dropdawn hide dropdown" id='women-dropdown'>
-            <div class="arrivals">
-                <h5>LASTEST ARRIVALS</h5>
-                <p>View all</p>
-                <p>Shop by Look</p>
-                <p>Valentine`s Day Gifts</p>
-                <p>Gucci Bamboo 1947</p>
-                <p>Gucci Off The Grid</p>
-                <p>The Year of the Tiger</p>
-                <p>The North Face X Gucci</p>
-            </div>
-            <div class="handbags">
-                <h5>HANDBAGS</h5>
-                <p>View all</p>
-                <p>Gucci Beloved</p>
-                <p>Crossbody Bagss</p>
-                <p>Mini Bags</p>
-                <p>Tote Bags</p>
-                <p>Sholder Bags</p>
-                <p>Clutches</p>
-            </div>
-            <div class="wear">
-                <h5>READY TO WAER</h5>
-                <p>View all</p>
-                <p>Shop by Look</p>
-                <p>Outwaer</p>
-                <p>Sweaters & Cardigans</p>
-                <p>Activewaer</p>
-                <p>Dresses</p>
-                <p>Blazes</p>
-            </div>
-            <div class="shoes">
-                <h5>SHOES</h5>
-                <p>View all</p>
-                <p>Boots</p>
-                <p>Sneakers</p>
-                <p>Sandals</p>
-                <p>Pumps</p>
-                <p>Ballet Flats</p>
-                <p>Maccasins & Loafers</p>
-            </div>
-            <div class="accessories">
-                <h5>ACCESSORIES</h5>
-                <p>View all</p>
-                <p>Wallets</p>
-                <p>Chain Wallets</p>
-                <p>Tech Accessories</p>
-                <p>PumBeltsps</p>
-                <p>Eyewaer</p>
-                <p>Hats & Cloves</p>
-            </div>
 
+                <li><a href="" class="container__navBar2__catergory">MEN</a>
+                    <div class="container__navBar2__dropdown" id='children-dropdown' style="margin-left: -380px;">
+                        <ul>
+                            <li><a href=""><span> ARRIVALS</span></a></li>
+                            <li><a href="">View all</a></li>
+                            <li><a href="">Shop by Look</a></li>
+                            <li><a href="">Valentine`s Day Gifts</a></li>
+                            <li><a href=""><Span> GIFTS</Span></a></li>
+                            <li><a href="">View all</a></li>
+                            <li><a href="">Gifts for men</a></li>
+                            <li><a href="">Personalized Gifts</a></li>
+                            <li><a href="">Gucci Services</a></li>
+                            <li><a href=""><span> BAGS</span></a></li>
+                            <li><a href="">View all</a></li>
+                            <li><a href="">Buisness Bags</a></li>
+                            <li><a href="">Bags & Backpacks</a></li>
+                            <li><a href="">Backpacks</a></li>
+                            <li><a href="">Messenger Bags</a></li>
+                            <li><a href="">Tote Bags</a></li>
+                            <li><a href="">Belt Bags</a></li>
+                            <li><a href="">View all</a></li>
+                            <li><a href="">Clothing</a></li>
+                            <li><a href="">Bags & Backpacks</a></li>
+                            <li><a href="">Portfolios</a></li>
+                            <li><a href=""><span>SHOES</span></a></li>
+                            <li><a href="">View all</a></li>
+                            <li><a href="">Boots</a></li>
+                            <li><a href="">Sneakers</a></li>
+                            <li><a href="">Sandals</a></li>
+                            <li><a href="">Driving Shoes</a></li>
+                            <li><a href="">Ballet Flats</a></li>
+                            <li><a href="">Lace Up Shoes</a></li>
+                            <li><a href=""><span>ACCESSORIES</span></a></li>
+                            <li><a href="">View all</a></li>
+                            <li><a href="">Wallets</a></li>
+                            <li><a href="">Chain Wallets</a></li>
+                            <li><a href="">Tech Accessories</a></li>
+                            <li><a href="">Scarves</a></li>
+                            <li><a href="">Eyewaer</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="" class="container__navBar2__catergory">WATCHES</a>
+                    <div class="container__navBar2__dropdown" id='watches-dropdown' style="margin-left: -560px;">
+                        <ul>
+
+                            <li><a href=""><span>WATCES</span></a></li>
+                            <li><a href="">View all</a></li>
+                            <li><a href="">For Men</a></li>
+                            <li><a href="">For Women()</a></li>
+                            <li><a href="">Gucci 25H Timepieces</a></li>
+                            <li><a href="">Grip Watches</a></li>
+
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="" class="container__navBar2__catergory">JEWELRY</a>
+                    <div class="container__navBar2__dropdown" id='jewelry-dropdown' style="margin-left: -740px;">
+                        <ul>
+                            <li><a href=""><span>JUWELRY</span></a></li>
+                            <li><a href="">View all</a></li>
+                            <li><a href="">Interlocking G Fine Necklace</a></li>
+                            <li><a href="">Gucci Link to Love</a></li>
+                            <li><a href="">For Women</a></li>
+                            <li><a href="">Grip Watches</a></li>
+                            <li><a href="">Rings</a></li>
+                            <li><a href="">Bracelets</a></li>
+                            <li><a href="">Earrings</a></li>
+                            <li><a href="">Necklaces</a></li>
+
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="" class="container__navBar2__catergory">HANDBAGS</a>
+                    <div class="container__navBar2__dropdown" id='jewelry-dropdown' style="margin-left: -918px;">
+                        <ul>
+                            <li><a href=""><span>HANDBAGS</span></a></li>
+                            <li><a href="">View all</a></li>
+                            <li><a href="">Shop by Line</a></li>
+                            <li><a href="">Gucci Bamboo 194</a></li>
+                            <li><a href="">Gucci Diana</a></li>
+                            <li><a href="">The Jackie 1961</a></li>
+                            <li><a href="">Dionysus</a></li>
+                            <li><a href=""><span>girls</span></a></li>
+                            <li><a href="">GG Marmont</a></li>
+                            <li><a href="">Tote Baga</a></li>
+                            <li><a href="">Shoulder Bags</a></li>
+                            <li><a href="">Crossbody Bags</a></li>
+                            <li><a href="">Mini Bags</a></li>
+                            <li><a href="">Clutches</a></li>
+                            <li><a href="">Casual Bags</a></li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
         </div>
-
-        
-        <div class="container__children hide dropdown" id='children-dropdown'>
-            <div class="baby">
-                <h5>BABY (0-36 month)</h5>
-                <p>View all</p>
-                <p>Newborn</p>
-                <p>Girls ()</p>
-                <p>Boys</p>
-                <p>Baby Shoes</p>
-                <p>Toddler Shoes</p>
-                <p>Special Occasion</p>
-            </div>
-            <div class="girls">
-                <h5>GIRLS (4 - 12 YEARS)</h5>
-                <p>View all</p>
-                <p>Clothing</p>
-                <p>Shoes</p>
-                <p>Bags & Backpacks</p>
-                <p>Balts</p>
-                <p>Soft Accessories</p>
-                <p>Special Occasion</p>
-            </div>
-            <div class="boys">
-                <h5>BOYS (4 - 12 YEARS)</h5>
-                <p>View all</p>
-                <p>Clothing</p>
-                <p>Bags & Backpacks</p>
-                <p>Balts</p>
-                <p>Soft Accessories</p>
-                <p>Special Occasion</p>
-            </div>
-        </div> -->
-
-
-
-        <div class="container__men">
-            <div class="arrivals">
-                <h5>LASTEST ARRIVALS</h5>
-                <p>View all</p>
-                <p>Shop by Look</p>
-                <p>Valentine`s Day Gifts</p>
-            </div>
-            <div class="gifts">
-                <h5>GIFTS</h5>
-                <p>View all</p>
-                <p>Gifts for men</p>
-                <p>Personalized Gifts</p>
-                <p>Gucci Services</p>
-            </div>
-            <div class="bags">
-                <h5>BAGS</h5>
-                <p>View all</p>
-                <p>Backpacks</p>
-                <p>Messenger Bags</p>
-                <p>Tote Bags</p>
-                <p>Belt Bags</p>
-                <p>Buisness Bags</p>
-                <p>Portfolios</p>
-            </div>
-            <div class="shoes">
-                <h5>SHOES</h5>
-                <p>View all</p>
-                <p>Boots</p>
-                <p>Sneakers</p>
-                <p>Sandals</p>
-                <p>Driving Shoes</p>
-                <p>Ballet Flats</p>
-                <p>Lace Up Shoes</p>
-            </div>
-            <div class="accessories">
-                <h5>ACCESSORIES</h5>
-                <p>View all</p>
-                <p>Wallets</p>
-                <p>Chain Wallets</p>
-                <p>Tech Accessories</p>
-                <p>Scarves</p>
-                <p>Eyewaer</p>
-                <p>Hats & Cloves</p>
-            </div>
-        </div>
-
-
-
-
-        <div class="container__watches">
-            <div class="watches">
-                <h5>WATCES</h5>
-                <p>View all</p>
-                <p>For Men</p>
-                <p>For Women()</p>
-                <p>Gucci 25H Timepieces</p>
-                <p>Grip Watches</p>
-                <p>Grip Straps</p>
-            </div>
-        </div>
-
-
-
-
-        <div class="container__jewelry">
-            <div class="jewelry">
-                <h5>JUWELRY</h5>
-                <p>View all</p>
-                <p>Interlocking G Fine Necklace</p>
-                <p>Gucci Link to Love</p>
-                <p>For Women</p>
-                <p>Grip Watches</p>
-                <p>Rings</p>
-                <p>Bracelets</p>
-                <p>Earrings</p>
-                <p>Necklaces</p>
-            </div>
-        </div>
-
-
-
-        
-        <div class="container__handbags">
-            <div class="handbags">
-                <h5>HANDBAGS</h5>
-                <p>View all</p>
-                <p>Shop by Line</p>
-                <p>Gucci Bamboo 194</p>
-                <p>Gucci Diana</p>
-                <p>The Jackie 1961</p>
-                <p>Dionysus</p>
-            </div>
-            <div class="girls">
-                <p>GG Marmont</p>
-                <p>Tote Baga</p>
-                <p>Shoulder Bags</p>
-                <p>Crossbody Bags</p>
-                <p>Mini Bags</p>
-                <p>Clutches</p>
-                <p>Casual Bags</p>
-            </div>
-        </div>
-
-
-
-
 
         <div style="margin-top: 39vh;" class="container__main">
             <img src="https://media.gucci.com/content/DarkGray_ProductPush_Standard_700x700/1643275817/ProductPush_678864UKEAV8739_001_Light.jpg"
