--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
@@ -73,20 +73,20 @@
     <div class="filter-dropbar">
         <div class="filter-dropbar__group"></div>
         <div class="filter-dropbar__group">
-            <p>AUTOMATIC WATCHES</p>
-            <p>CLASSIC WATCHES</p>
-            <p>LADIES WATCHES</p>
-            <p>MANS WATCHES</p>
-            <p>MILITRY WATCHES</p>
-            <p>NEW RELEASES</p>
-            <p>SPORT WATCHES</p>
+            <p class="per">AUTOMATIC WATCHES</p>
+            <p class="per">CLASSIC WATCHES</p>
+            <p class="per">LADIES WATCHES</p>
+            <p class="per">MANS WATCHES</p>
+            <p class="per">MILITRY WATCHES</p>
+            <p class="per">NEW RELEASES</p>
+            <p class="per">SPORT WATCHES</p>
         </div>
         <div class="filter-dropbar__group">
-            <p>AIRCOBRA</p>
-            <p>BRISTOL</p>
-            <p>DOUGLAS</p>
-            <p>MIG</p>
-            <p>MOONFLIGHT</p>
+            <p class="per">AIRCOBRA</p>
+            <p class="per">BRISTOL</p>
+            <p class="per">DOUGLAS</p>
+            <p class="per">MIG</p>
+            <p class="per">MOONFLIGHT</p>
         </div>
         <div class="filter-dropbar__group">
             <p>Chronograph</p>
