--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/customer.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/customer.html
@@ -62,10 +62,16 @@
              <!-- </div> -->
          </div>
 
-
-         <!-- <form class="container_sortANDfilterBtns-box_form" onsubmit="displayFilter(event)"></form> -->
-         <!-- <button class="main_form-filterInputsCustomer-submit" type="submit">search</button> -->
-
+         <div class="container_catagories-ShoppingCart">
+                <div class="container_catagories-ShoppingCart_display">
+                    <!-- <div class="container_catagories-ShoppingCart_display-item">
+                        <h1 class="container_catagories-ShoppingCart_display-item-header">sdasdasdasdasd</h1>
+                        <p class="container_catagories-ShoppingCart_display-item-sizeAndPrice">lalasddasda</p>
+                        <button class="container_catagories-ShoppingCart_display-item-deleteBtn" type="button" onclick="deleteFromCart(event)"></button>
+                    </div> -->
+                </div>
+         </div>
+         
 </div>
 <script src="dist/taskFilter.js"></script>
  
