--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
@@ -56,55 +56,67 @@
                 </div>
             </div>
         </div>
-
-
-            <select onchange="handlePriceRange(event)">
-                <option value="" disabled selected>price</option>
-                <input type="range" min="1" max="100" value="50">
-
-                <!-- <option value="priceRange">
-                    price range
-                </option> -->
-            </select>
-
-            <select onchange="handleShoeSize(event)">
-                <option value="" disabled selected>shoe</option>
-
-                <option value="shoeSize">
-                    shoe size
-                    <input type="range">
-                </option>
-            </select>
-
-            <select onchange="handleGender(event)">
-                <option value="" disabled selected>gender</option>
-
-                <option value="gender">
-                    gender
-            </select>
-
-            <select onchange="handleColor(event)">
-                <option value="" disabled selected>color</option>
-
-                <option value="color">
-                    color
-            </select>
-
-            <select onchange="handleType(event)">
-                <option value="" disabled selected>type</option>
-
-                <option value="sneakers"> </option>
-                <option value="boots"> </option>
-                <option value="hi tops"> </option>
-                <option value="flip flops"> </option>
-
-            </select>
-          
-
-        </div>
+    </div>
 
     </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- <select onchange="handlePriceRange(event)">
+        <option value="" disabled selected>price</option>
+        <input type="range" min="1" max="100" value="50">
+
+        <option value="priceRange">
+            price range
+        </option>
+    </select>
+
+    <select onchange="handleShoeSize(event)">
+        <option value="" disabled selected>shoe</option>
+
+        <option value="shoeSize">
+            shoe size
+            <input type="range">
+        </option>
+    </select>
+
+    <select onchange="handleGender(event)">
+        <option value="" disabled selected>gender</option>
+
+        <option value="gender">
+            gender
+    </select>
+
+    <select onchange="handleColor(event)">
+        <option value="" disabled selected>color</option>
+
+        <option value="color">
+            color
+    </select>
+
+    <select onchange="handleType(event)">
+        <option value="" disabled selected>type</option>
+
+        <option value="sneakers"> </option>
+        <option value="boots"> </option>
+        <option value="hi tops"> </option>
+        <option value="flip flops"> </option>
+
+    </select>
+   -->
     <!-- <div class="breadCrumbs">
         <a href="">back</a>
         <ul>
@@ -594,7 +606,7 @@
         </div>
     </div>
     <div class="footer">
-  
+
 
         <div class="footer__top">
             <h4>JOIN OUR CREATORS CLUB & GET 15% OFF</h4>
