--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
@@ -56,7 +56,10 @@
 
     </div>
 
-
+    <div class="container">
+        <h2><strong>THIS IS POWER</strong></h2>
+        <p>The new Predator Edge football boots.</p>
+    </div>
 
 
 
