--- a/02-JavaScript/07-DOM manipulations/Andrew/andrew/06/index.html
+++ b/02-JavaScript/07-DOM manipulations/Andrew/andrew/06/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="dist/style.css">
 </head>
+
 <body>
+    <div id="background">
+        <h1 id="first-text">super sale</h1>
+
+        <div id="box">
+            <img src="https://wallpaperaccess.com/full/188825.jpg" alt="">
+            <h1 id="second-text">Super sale!!!</h1>
+        </div>
+        
+    </div>
     
 
-
-    <script src="dist/index.js"></script>
+    <!-- <script src="dist/index.js"></script> -->
 </body>
+
 </html>
