--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
@@ -82,11 +82,11 @@
             <p class="per">SPORT WATCHES</p>
         </div>
         <div class="filter-dropbar__group">
-            <p class="per">AIRCOBRA</p>
-            <p class="per">BRISTOL</p>
-            <p class="per">DOUGLAS</p>
-            <p class="per">MIG</p>
-            <p class="per">MOONFLIGHT</p>
+            <p class="per1">AIRCOBRA</p>
+            <p class="per1">BRISTOL</p>
+            <p class="per1">DOUGLAS</p>
+            <p class="per1">MIG</p>
+            <p class="per1">MOONFLIGHT</p>
         </div>
         <div class="filter-dropbar__group">
             <p>Chronograph</p>
