--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
@@ -144,18 +144,14 @@
     </div>
     <div id='main'></div>
 
-
     <div class='wow'>
         <h2 class='wow__title'>your items redy to delivery:</h2>
         <div id='cart'></div>
     </div>
 
-   
-
-
-
-
-
+    <div id="footer">
+        <a href="owner.html">Owner Page</a>
+    </div>
 </body>
 
 </html>
