--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/owner.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/owner.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="dist/style.css">
 </head>
 
 <body>
@@ -32,7 +33,9 @@
     </form>
     <br>
 
-    <div id="root"></div>
+    <div id="root">
+        
+    </div>
 
 
     <script src="dist/owner.js"></script>
