--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Customer</title>
+    <title>ADIDAS</title>
     <link rel="icon" href=images/adidasLogo.png type="image/x-icon">
 
     <link rel="stylesheet" href="dist/style.css" />
@@ -240,10 +240,10 @@
                 <div class="picture">
                     <i class="far fa-heart"></i>
 
-                    <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095730_ultraboost-22-shoes_gx5462_side-lateral-center-view.jpeg"
+                    <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0096747_adistar-shoes_gx3000_side-lateral-center-view.jpeg"
                         alt="Card Back">
 
-                    <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095732_ultraboost-22-shoes_gx5462_top-portrait-view.jpeg"
+                    <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0096748_adistar-shoes_gx3000_top-portrait-view.jpeg"
                         class="img-top" alt="Card Front">
                 </div>
                 <div class="color">
@@ -264,7 +264,7 @@
                     <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095730_ultraboost-22-shoes_gx5462_side-lateral-center-view.jpeg"
                         alt="Card Back">
 
-                    <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095732_ultraboost-22-shoes_gx5462_top-portrait-view.jpeg"
+                    <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0097623_ultraboost-50-dna-shoes_gz0442_top-portrait-view.jpeg"
                         class="img-top" alt="Card Front">
                 </div>
                 <div class="color">
