--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
@@ -10,7 +10,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,200;1,300&family=The+Nautigal&family=VT323&family=Zen+Kurenaido&display=swap"
         rel="stylesheet">
-
     <link rel="shortcut icon" sizes="16x16" type="image/x-icon"
         href="http://www.fusushi.co.il/warehouse/dynamic/50900.png">
     <script src="https://kit.fontawesome.com/e87667ff79.js" crossorigin="anonymous"></script>
@@ -19,7 +18,7 @@
 </head>
 
 <body>
-
+    <div class="blurwrapper"></div>
     <section class='home'>
         <div class="homeopacity">
             <nav class="navbar">
@@ -220,6 +219,8 @@
         </div>
 
     </section>
+
+
 
     <script src='dist/index.js'></script>
 </body>
