--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
@@ -635,7 +635,13 @@
     <div id="rootCart"></div>
     <div id="wishList"></div>
 
+    <div id="root">
+        
+    </div>
+
+
     <script src="dist/customer.js"> </script>
+    <script src="dist/owner.js"> </script>
 </body>
 
 </html>
