--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
@@ -59,15 +59,15 @@
     </div>
     <div class="filter-bar">
         <div class="filter-bar__item">All Watches</div>
-        <div class="filter-bar__item">Group</div>
-        <div class="filter-bar__item">Collection</div>
-        <div class="filter-bar__item">Function</div>
-        <div class="filter-bar__item">Movement</div>
-        <div class="filter-bar__item">Case</div>
-        <div class="filter-bar__item">Diameter</div>
-        <div class="filter-bar__item">Dial</div>
-        <div class="filter-bar__item">Bracelet</div>
-        <div class="filter-bar__item">Sort by</div>
+        <div class="filter-bar__item drop">Group</div>
+        <div class="filter-bar__item drop">Collection</div>
+        <div class="filter-bar__item drop">Function</div>
+        <div class="filter-bar__item drop">Movement</div>
+        <div class="filter-bar__item drop">Case</div>
+        <div class="filter-bar__item drop">Diameter</div>
+        <div class="filter-bar__item drop">Dial</div>
+        <div class="filter-bar__item drop">Bracelet</div>
+        <div class="filter-bar__item drop">Sort by</div>
     </div>
 
     <div class="filter-dropbar">
