--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.html
@@ -192,11 +192,11 @@
         <!--John-->
         <!--Etan-->
         <button data-back-to-top onclick="handleTop(event)" class="backToTop">
-            Back to top
+            
         </button>
         <footer>
             <div data-1 class="secondaryNav__locator">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 20">
+                    <span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 20">
                         <symbol viewBox="0 0 14 20" id="a">
                             <path
                                 d="M7 10.8c-1.7 0-3-1.4-3-3.2 0-1.8 1.3-3.2 3-3.2s3 1.4 3 3.2c0 1.8-1.3 3.2-3 3.2m7-3.2C14 3.4 10.9 0 7 0S0 3.4 0 7.6c0 2.1.8 4 2.1 5.4l5 7 5-7c1.1-1.4 1.9-3.3 1.9-5.4"
@@ -204,9 +204,11 @@
                         </symbol>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#a" />
                     </svg>
-                STORE LOCATOR
+                STORE LOCATOR</span>
 
-                <div><span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 20"><symbol viewBox="0 0 14 20" id="svg-icon-location"><title>location</title> <g fill="currentColor"> <path d="M7,10.8c-1.7,0-3-1.4-3-3.2c0-1.8,1.3-3.2,3-3.2c1.7,0,3,1.4,3,3.2C10,9.4,8.7,10.8,7,10.8 M14,7.6&#10;&#9;&#9;&#9;C14,3.4,10.9,0,7,0S0,3.4,0,7.6c0,2.1,0.8,4,2.1,5.4l0,0l5,7l5-7l0,0C13.2,11.6,14,9.7,14,7.6"/> </g> </symbol><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-location"/></svg></span><input type="text"><img src="./SVG/arrowBigScreen.svg"></div>
+                <div><span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 20"><symbol viewBox="0 0 14 20" id="svg-icon-location"><title>location</title> <g fill="currentColor"> <path d="M7,10.8c-1.7,0-3-1.4-3-3.2c0-1.8,1.3-3.2,3-3.2c1.7,0,3,1.4,3,3.2C10,9.4,8.7,10.8,7,10.8 M14,7.6&#10;&#9;&#9;&#9;C14,3.4,10.9,0,7,0S0,3.4,0,7.6c0,2.1,0.8,4,2.1,5.4l0,0l5,7l5-7l0,0C13.2,11.6,14,9.7,14,7.6"/> </g> </symbol><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-location"/></svg></span>
+                    <input type="text" placeholder="Zip, State, or Postal">
+                    <img src="./SVG/arrowBigScreen.svg"></div>
                 <i class="fas fa-plus"></i>
             </div>
             <nav data-2 class="secondaryNav">
@@ -318,7 +320,7 @@
                 </div>
             </nav>
 
-            <nav data-4 class="secondaryNav">
+            <nav data-4 class="secondaryNav secondaryNav__withOutIcons">
                 <ul class="secondaryNav__help"><p>NEED HELP?</p>
                     <li>Contact Us</li>
                     <li>Shipping Services</li>
