--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/owner.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/owner.html
@@ -10,12 +10,15 @@
 </head>
 
 <body>
-    <form  onsubmit="handleSubmit(event)">
+    <div id="footer">
+        <a href="index.html"> Website </a>
+    </div>
+    <form onsubmit="handleSubmit(event)">
         <input type="text" name="name" placeholder="name">
         <input type="number" name="price" placeholder="price">
         <input type="text" name="img" placeholder="img">
-        
-        <select  name="group" id="">
+
+        <select name="group" id="">
             <option value="group" disabled selected>gruop</option>
             <option value="AUTOMATIC WATCHES">AUTOMATIC WATCHES</option>
             <option value="CLASSIC WATCHES">CLASSIC WATCHES</option>
@@ -25,7 +28,7 @@
             <option value="NEW RELEASES">NEW RELEASES</option>
             <option value="SPORT WATCHES">SPORT WATCHES</option>
         </select>
-        <select name="Collection" id="" >
+        <select name="Collection" id="">
             <option value="collection" disabled selected>collection</option>
             <option value="AIRCOBRA">AIRCOBRA</option>
             <option value="BRISTOL">BRISTOL</option>
@@ -41,7 +44,7 @@
             <option value="Oversized Date">Oversized Date</option>
             <option value="Small Second">Small Second</option>
         </select>
-        <select name="movement" id="" >
+        <select name="movement" id="">
             <option value="movement" disabled selected>movement</option>
             <option value="Automatic">Automatic</option>
             <option value="Quartz">Quartz</option>
@@ -55,7 +58,7 @@
             <option value="Rose Gold PVD">Rose Gold PVD</option>
             <option value="Stainless Steel">Stainless Steel</option>
         </select>
-        <select name="diameter" id="" >
+        <select name="diameter" id="">
             <option value="diameter" disabled selected>diameter</option>
             <option value="36 mm">36 mm</option>
             <option value="41.20 mm">41.20 mm</option>
@@ -93,8 +96,8 @@
         <input type="text" name="name" placeholder="name">
         <input type="number" name="price" placeholder="price">
         <input type="text" name="img" placeholder="img">
-        
-        <select  name="group" id="">
+
+        <select name="group" id="">
             <option value="group" disabled selected>gruop</option>
             <option value="AUTOMATIC WATCHES">AUTOMATIC WATCHES</option>
             <option value="CLASSIC WATCHES">CLASSIC WATCHES</option>
@@ -104,7 +107,7 @@
             <option value="NEW RELEASES">NEW RELEASES</option>
             <option value="SPORT WATCHES">SPORT WATCHES</option>
         </select>
-        <select name="Collection" id="" >
+        <select name="Collection" id="">
             <option value="collection" disabled selected>collection</option>
             <option value="AIRCOBRA">AIRCOBRA</option>
             <option value="BRISTOL">BRISTOL</option>
@@ -120,7 +123,7 @@
             <option value="Oversized Date">Oversized Date</option>
             <option value="Small Second">Small Second</option>
         </select>
-        <select name="movement" id="" >
+        <select name="movement" id="">
             <option value="movement" disabled selected>movement</option>
             <option value="Automatic">Automatic</option>
             <option value="Quartz">Quartz</option>
@@ -134,7 +137,7 @@
             <option value="Rose Gold PVD">Rose Gold PVD</option>
             <option value="Stainless Steel">Stainless Steel</option>
         </select>
-        <select name="diameter" id="" >
+        <select name="diameter" id="">
             <option value="diameter" disabled selected>diameter</option>
             <option value="36 mm">36 mm</option>
             <option value="41.20 mm">41.20 mm</option>
@@ -168,7 +171,7 @@
         <input type="text" name="id" disabled>
         <input type="submit" value="Update" name="send" class="">
     </form>
-   <div id="root"></div>
+    <div id="root"></div>
     <script src="dist/owner.js"></script>
 </body>
 
